<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/game_ll_main"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/game_ll_main"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/game_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/game_ll_main"
        android:layout_centerInParent="true"
        android:text="@string/btn_start" />

    <Button
        android:id="@+id/game_btn_submit_sensors"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/game_btn_submit"
        android:layout_centerInParent="true"
        android:text="@string/btn_start_sensors" />

    <Button
        android:id="@+id/game_btn_records"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/game_btn_submit_sensors"
        android:layout_centerInParent="true"
        android:text="@string/btn_records" />

    <TextView
        android:id="@+id/game_tv_records_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_records"
        android:textSize="40dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/game_tv_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_below="@+id/game_tv_records_label"
        android:visibility="gone"/>

    <Button
        android:id="@+id/game_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_back"
        android:textSize="40dp"
        android:visibility="gone"/>
</RelativeLayout>